--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ android {
 dependencies {
 //    implementation
     api fileTree(dir: 'libs', include: ['*.jar'])
-    api 'com.android.support:appcompat-v7:27.1.1'
+    api 'com.android.support:appcompat-v7:27.1.1'  //v4 Support Libraries
     api 'com.android.support:recyclerview-v7:27.1.1'
     api 'com.android.support:design:27.1.1'// material design 的引入....
     api 'com.android.support.constraint:constraint-layout:1.1.3'
