--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.SEND_SMS" />
@@ -18,9 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".broadcastreceiver.ReceiverActivity" />
-
-        <!--        广播-->
+        <activity android:name=".components.drawlayout.DrawLayoutActivity"></activity>
+        <activity android:name=".broadcastreceiver.ReceiverActivity" /> <!-- 广播 -->
         <receiver android:name=".broadcastreceiver.MyReceiver2">
             <intent-filter android:priority="10">
                 <action android:name="com.yy.app.broadcastreceiver.intent.myreceiver.action" />
@@ -32,9 +30,7 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".service.ServiceActivity" />
-
-        <!--        服务-->
+        <activity android:name=".service.ServiceActivity" /> <!-- 服务 -->
         <service
             android:name=".service.MyService"
             android:enabled="true"
