--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.yy.app">
 
     <uses-permission android:name="android.permission.SEND_SMS" />
@@ -16,7 +17,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
 
         <!--        使用了actionBar 所以需要使用  NoActionBar 的主题 -->
         <activity
@@ -63,7 +65,12 @@
         <activity android:name=".components.cardview.CardViewActivity" />
         <activity android:name=".components.listview.recyclerview.RecyclerViewActivity" />
         <activity android:name=".components.listview.ListViewActivity" />
-        <activity android:name=".components.ComponentMainActivity" />
+        <activity android:name=".components.ComponentMainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.define" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity android:name=".components.fragment.FragmentActivity" />
         <activity android:name="function.FunctionActivity" /> <!-- 主界面 -->
         <activity android:name=".MainActivity">
@@ -73,14 +80,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity> <!-- 从主界面跳转到此界面, parentActivityName添加此界面的父界面是MainActivity -->
-        <!-- Animator -->
-        <activity android:name=".components.animator.AnimatorActivity" /> <!-- Anim -->
-        <activity android:name=".components.animator.AnimActivity" /> <!-- ListActivity -->
-        <!-- ListView 控件的使用 -->
-        <!-- action 配置 -->
-        <!-- Permission 权限 -->
-        <activity android:name=".permission.checkPermissionActivity" /> <!-- 截屏 start -->
-        <activity android:name="function.shortcut.ShortCutMainActivity" />
+
     </application>
 
 </manifest>
