--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,16 @@
 apply plugin: 'com.android.application'
 
+
+//名称	版本号	API等级
+//Android Q	10.0	29
+//Android Pie	9.0	28
+
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.yy.app"
-        minSdkVersion 27
-        targetSdkVersion 27
+        minSdkVersion 28
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -36,10 +41,12 @@ android {
 dependencies {
 //    implementation
     api fileTree(dir: 'libs', include: ['*.jar'])
-    api 'com.android.support:appcompat-v7:27.1.1'  //v4 Support Libraries
-    api 'com.android.support:recyclerview-v7:27.1.1'
-    api 'com.android.support:design:27.1.1'// material design 的引入....
+    api 'com.android.support:appcompat-v7:28.0.0'  //v4 Support Libraries
+    api 'com.android.support:recyclerview-v7:28.0.0'
+    api 'com.android.support:design:28.0.0'// material design 的引入....
     api 'com.android.support.constraint:constraint-layout:1.1.3'
-    api 'com.android.support:support-v4:27.1.1'
-    api 'com.android.support:cardview-v7:27.1.1'
+    api 'com.android.support:support-v4:28.0.0'
+    api 'com.android.support:cardview-v7:28.0.0'
 }
+
+
