--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
             android:exported="true" />
 
         <activity android:name=".components.ViewPagerActivity" />
-        <activity android:name=".components.animator.ValueAnimatorActivity" />
+        <activity android:name=".animator.ValueAnimatorActivity" />
         <activity android:name=".components.OtherActivity" />
         <activity android:name=".components.swiperefreshlayout.SwipeRefreshLayoutActivity" /> <!-- 向上操作 parentActivityName 的设置 -->
         <activity
@@ -80,6 +80,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity> <!-- 从主界面跳转到此界面, parentActivityName添加此界面的父界面是MainActivity -->
+
+
+        <activity android:name="com.yy.app.animator.AnimActivity" />
 
     </application>
 
