--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,12 +39,25 @@ android {
 }
 
 dependencies {
-//    implementation
-    api fileTree(dir: 'libs', include: ['*.jar'])
-    api 'com.android.support:appcompat-v7:28.0.0'  //v4 Support Libraries
+    //    implementation
+    api fileTree(include: ['*.jar'], dir: 'libs')
+    api 'com.android.support:appcompat-v7:28.0.0'
+    //v4 Support Libraries
     api 'com.android.support:recyclerview-v7:28.0.0'
-    api 'com.android.support:design:28.0.0'// material design 的引入....
+    api 'com.android.support:design:28.0.0'
+    // material design 的引入....
     api 'com.android.support.constraint:constraint-layout:1.1.3'
     api 'com.android.support:support-v4:28.0.0'
     api 'com.android.support:cardview-v7:28.0.0'
+//    api files('libs/org.apache.http.legacy.jar')
+//    api files('libs/Volley.jar')
+    api files('libs/gson-2.2.4.jar')
+    api files('libs/fastjson-1.2.5.jar')
+    api files('libs/photoview-library-1.2.2.jar')
+    api files('libs/eventbus.jar')
+    api files('libs/switchlayoutlib.jar')
+    api files('libs/picasso-2.4.0.jar')
+    api files('libs/activeandroid-3.1-beta.jar')  // ORM
+    api files('libs/litepal-2.0.0.jar')  // ORM
+    api 'com.github.Cutta:GifView:1.1'
 }
