--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,13 @@ android {
         }
     }
 
+    // aar
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+    }
+
     dexOptions {
 //        incremental =true
         javaMaxHeapSize "4g" //此处可根据电脑本身配置 数值越大 当然越快
@@ -56,8 +63,14 @@ dependencies {
     api files('libs/photoview-library-1.2.2.jar')
     api files('libs/eventbus.jar')
     api files('libs/switchlayoutlib.jar')
-    api files('libs/picasso-2.4.0.jar')
+    api files('libs/picasso-2.4.0.jar') // 图片
+//    api files('libs/glide-3.8.0.jar') // 图片
+    api files('libs/glide-4.5.0-sources.jar') // 图片
     api files('libs/activeandroid-3.1-beta.jar')  // ORM
-    api files('libs/litepal-2.0.0.jar')  // ORM
+    api files('libs/litepal-2.0.0.jar')  // 大神的
+    api files('libs/mylibrary.jar')  // 我的
     api 'com.github.Cutta:GifView:1.1'
+    // 引入aar方式
+//    api(name:'xxxx',ext:'aar')
+
 }
