--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 /build
+/.idea
 /.gradle
 /.idea
 /androidNewCommons.iml
 /gradlew
 /gradlew.bat
 /local.properties
+/.idea/gradle.xml
+/.idea/runConfigurations.xml
+/.idea/saveactions_settings.xml
+/.idea/codeStyles/*
