--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,12 +64,14 @@ dependencies {
     api files('libs/eventbus.jar')
     api files('libs/switchlayoutlib.jar')
     api files('libs/picasso-2.4.0.jar') // 图片
-    api files('libs/glide-4.5.0-sources.jar') // 图片
+//    api files('libs/glide-4.5.0-sources.jar') // 图片
     api files('libs/activeandroid-3.1-beta.jar')  // ORM
     api files('libs/litepal-2.0.0.jar')  // 大神的
     api files('libs/mylibrary.jar')  // 我的
     api files('libs/jsoup-1.8.1.jar')   // 解析html文档
     api 'com.github.Cutta:GifView:1.1'
+    api 'com.squareup.okhttp3:okhttp:3.4.1'
+    api 'com.github.bumptech.glide:glide:3.7.0'
     // 引入aar方式
 //    api(name:'xxxx',ext:'aar')
 
