--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="label,allowBackup">
-        <activity android:name="function.thread.ThreadMainActivity"></activity>
+        <activity android:name=".components.dialog.DialogActivity"></activity>
+        <activity android:name="function.thread.ThreadMainActivity" />
         <activity android:name="function.webview.WebviewActivity" />
         <activity android:name="function.audio_video.AudioVideoActivity" />
         <activity android:name="function.notification.NotificationActivity" />
@@ -60,12 +61,10 @@
             android:name=".service.MyIntentService"
             android:enabled="true"
             android:exported="true" />
-
         <service
             android:name="function.coolweather.service.AutoUpdateService"
             android:enabled="true"
             android:exported="true" />
-
 
         <activity android:name=".components.ViewPagerActivity" />
         <activity android:name=".animator.ValueAnimatorActivity" />
