--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     api 'com.github.Cutta:GifView:1.1'
     api 'com.squareup.okhttp3:okhttp:3.4.1'
     api 'com.github.bumptech.glide:glide:3.7.0'
+    api 'de.hdodenhof:circleimageview:2.1.0'
     // 引入aar方式
 //    api(name:'xxxx',ext:'aar')
 
