--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
-        
+
 //        只支持armeabi-v7a
         ndk {
             abiFilters "armeabi-v7a"  // 指定要ndk需要兼容的架构(这样其他依赖包里mips,x86,armeabi,arm-v8之类的so会被过滤掉)
@@ -66,19 +66,19 @@ dependencies {
 //    api files('libs/org.apache.http.legacy.jar')
 //    api files('libs/Volley.jar')
     api files('libs/gson-2.2.4.jar')
+    api files('libs/glide-3.8.0.jar')
     api files('libs/fastjson-1.2.5.jar')
     api files('libs/photoview-library-1.2.2.jar')
     api files('libs/eventbus.jar')
     api files('libs/switchlayoutlib.jar')
     api files('libs/picasso-2.4.0.jar') // 图片
-//    api files('libs/glide-4.5.0-sources.jar') // 图片
     api files('libs/activeandroid-3.1-beta.jar')  // ORM
     api files('libs/litepal-2.0.0.jar')  // 大神的
     api files('libs/mylibrary.jar')  // 我的
     api files('libs/jsoup-1.8.1.jar')   // 解析html文档
     api 'com.github.Cutta:GifView:1.1'
     api 'com.squareup.okhttp3:okhttp:3.4.1'
-    api 'com.github.bumptech.glide:glide:3.7.0'
+//    api 'com.github.bumptech.glide:glide:3.7.0'
     api 'de.hdodenhof:circleimageview:2.1.0'
     // 引入aar方式
 //    api(name:'xxxx',ext:'aar')
