百度地图demo上传(一般so文件只用armeabi-v7a即可)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,9 @@ android {
         }
 
     }
-    signingConfigs {//签名的配置
+
+    //签名的配置
+    signingConfigs {
         release {
             storeFile file('thekeystore')
             storePassword 'yonyou'
