--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@
 buildscript {
 
     repositories {
-        google() //
-        jcenter()
+        google()
+        jcenter()//使用jcenter库
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
@@ -14,6 +14,7 @@ buildscript {
     }
 }
 
+//为所有的工程的repositories配置为jcenters
 allprojects {
     repositories {
         google()
