--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="label,allowBackup">
-        <activity android:name="function.geolocation.GeoLocationActivity"></activity>
+        <activity android:name=".components.viewpager.ViewPagerActivity"></activity>
+        <activity android:name="function.geolocation.GeoLocationActivity" />
         <activity android:name=".components.dialog.DialogActivity" />
         <activity android:name="function.thread.ThreadMainActivity" />
         <activity android:name="function.webview.WebviewActivity" />
@@ -74,7 +75,6 @@
         <activity
             android:name=".material.FruitActivity"
             android:theme="@style/AppTheme3" />
-        <activity android:name=".components.ViewPagerActivity" />
         <activity android:name=".animator.ValueAnimatorActivity" />
         <activity android:name=".components.OtherActivity" />
         <activity android:name=".components.swiperefreshlayout.SwipeRefreshLayoutActivity" /> <!-- 向上操作 parentActivityName 的设置 -->
