--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,14 @@ android {
             abiFilters "armeabi-v7a"  // 指定要ndk需要兼容的架构(这样其他依赖包里mips,x86,armeabi,arm-v8之类的so会被过滤掉)
         }
 
+
     }
+
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
+    }
+
 
     //签名的配置
     signingConfigs {
@@ -103,6 +110,7 @@ dependencies {
     api 'com.github.Cutta:GifView:1.1'
     api 'com.squareup.okhttp3:okhttp:3.4.1'
     api 'de.hdodenhof:circleimageview:2.1.0'
+//    api 'com.android.support:multidex:1.0.3'
 //    api 'com.github.bumptech.glide:glide:3.7.0'
     // 引入aar方式
 //    api(name:'xxxx',ext:'aar')
