--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="label,allowBackup">
+        <activity android:name=".activity.tabhost.TabLayoutViewPagerActivity"></activity>
         <activity
             android:name=".activity.tabhost.MainTabhostActivity"
             android:theme="@style/AppTheme3" />
