--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,25 +94,31 @@ dependencies {
     api 'com.android.support.constraint:constraint-layout:1.1.3'
     api 'com.android.support:support-v4:28.0.0'
     api 'com.android.support:cardview-v7:28.0.0'
-//    api files('libs/org.apache.http.legacy.jar')
-//    api files('libs/Volley.jar')
+    //    api files('libs/org.apache.http.legacy.jar')
+    //    api files('libs/Volley.jar')
     api files('libs/gson-2.2.4.jar')
     api files('libs/glide-3.8.0.jar')
     api files('libs/fastjson-1.2.5.jar')
     api files('libs/photoview-library-1.2.2.jar')
     api files('libs/eventbus.jar')
     api files('libs/switchlayoutlib.jar')
-    api files('libs/picasso-2.4.0.jar') // 图片
-    api files('libs/activeandroid-3.1-beta.jar')  // ORM
-    api files('libs/litepal-2.0.0.jar')  // 大神的
-    api files('libs/mylibrary.jar')  // 我的
-    api files('libs/jsoup-1.8.1.jar')   // 解析html文档
+    api files('libs/picasso-2.4.0.jar')
+    // 图片
+    api files('libs/activeandroid-3.1-beta.jar')
+    // ORM
+    api files('libs/litepal-2.0.0.jar')
+    // 大神的
+    api files('libs/mylibrary.jar')
+    // 我的
+    api files('libs/jsoup-1.8.1.jar')
+    // 解析html文档
     api 'com.github.Cutta:GifView:1.1'
     api 'com.squareup.okhttp3:okhttp:3.4.1'
     api 'de.hdodenhof:circleimageview:2.1.0'
-//    api 'com.android.support:multidex:1.0.3'
-//    api 'com.github.bumptech.glide:glide:3.7.0'
+    //    api 'com.android.support:multidex:1.0.3'
+    //    api 'com.github.bumptech.glide:glide:3.7.0'
     // 引入aar方式
-//    api(name:'xxxx',ext:'aar')
-
+    //    api(name:'xxxx',ext:'aar')
+    implementation files('libs/okio-2.4.0.jar')
+    implementation files('libs/okhttp-3.12.0.jar')
 }
