--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx2536m
+#org.gradle.jvmargs=-Xmx2536m
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
@@ -14,3 +14,8 @@ org.gradle.jvmargs=-Xmx2536m
 # new modules 的时候改为ture, 然后改为false
 android.useAndroidX=false
 android.enableJetifier=false
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx2948m -XX:MaxPermSize=712m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+
