--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,10 +68,23 @@ android {
         }
     }
 
+
     dexOptions {
-//        incremental =true
+        incremental = true
+        dexInProcess false    // 加快构建速度:是作为单独的进程运行dx编译器，还是在Gradle守护进程JVM中运行。
         javaMaxHeapSize "4g" //此处可根据电脑本身配置 数值越大 当然越快
         preDexLibraries = false
+        maxProcessCount = 4
+
+
+//        电脑配置高的话可以放开下面的配置
+//        javaMaxHeapSize "4g"
+//        incremental true
+//        preDexLibraries = false
+//        dexInProcess false
+//        maxProcessCount = 4
+//        threadCount = 4
+
 
     }
 
