--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,8 @@
 android.useAndroidX=false
 android.enableJetifier=false
 org.gradle.daemon=true
-org.gradle.jvmargs=-Xmx2948m -XX:MaxPermSize=712m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#争强构建速度下面的这句很关键
+org.gradle.jvmargs=-Xmx3548m -XX:MaxPermSize=712m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.parallel=true
 org.gradle.configureondemand=true
 
