--- a/third_leakcanary/build.gradle
+++ b/third_leakcanary/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
+    // dev
+    api 'com.squareup.leakcanary:leakcanary-android:1.3'
+
+    // release
+//    api 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
 }
