--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':app', ':mytest', ':new_module', 'app_common', 'design_DesignPattern'
-//':BaiduLocationDemo'
+include ':app', ':mytest', ':new_module', 'app_common'
+//':BaiduLocationDemo','design_DesignPattern'
 include 'third_leakcanary'
