--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,12 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="label,allowBackup">
+
+        <!--        注册内容提供者 -->
+        <provider
+            android:name="com.yy.app.contentprovider.csdn.DatabaseProvider"
+            android:authorities="com.yy.app.provider" />
+
         <activity android:name=".components.ConstraintActivity"></activity>
         <activity android:name="function.designframework.mvc.view.MvcActivity" />
         <activity android:name=".network.OkhttpActivity" />
