--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':app', ':mytest', ':new_module', 'app_common'
+include ':app', ':mytest', ':new_module', 'app_common', ':FloatWindowPermission'
 //':BaiduLocationDemo','design_DesignPattern'
 include 'third_leakcanary'
